--- a/user/views/elements/navbar-header.ejs
+++ b/user/views/elements/navbar-header.ejs
@@ -4,7 +4,7 @@
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navcol-1">
             <ul class="nav navbar-nav">
-                <li class="nav-item" role="presentation"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link" href="/">Home</a></li>
                 <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown"
                         aria-expanded="true" href="#">Danh mục sản phẩm&nbsp;</a>
                     <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation"
