--- a/user/views/index.ejs
+++ b/user/views/index.ejs
@@ -8,7 +8,7 @@
 							<div class="d-none d-md-block">
 								<div class="filters">
 									<div class="filter-item">
-										<h3>Categories</h3>
+										<h3 style="color: blue;">Categories</h3>
 										<div class="form-check"><input class="form-check-input" type="checkbox"
 												id="formCheck-1"><label class="form-check-label"
 												for="formCheck-1">Phones</label></div>
@@ -23,7 +23,7 @@
 												for="formCheck-4">Tablets</label></div>
 									</div>
 									<div class="filter-item">
-										<h3>Brands</h3>
+										<h3 style="color: blue;">Brands</h3>
 										<div class="form-check"><input class="form-check-input" type="checkbox"
 												id="formCheck-5"><label class="form-check-label"
 												for="formCheck-5">Samsung</label></div>
@@ -35,7 +35,7 @@
 												for="formCheck-7">HTC</label></div>
 									</div>
 									<div class="filter-item">
-										<h3>OS</h3>
+										<h3 style="color: blue;">OS</h3>
 										<div class="form-check"><input class="form-check-input" type="checkbox"
 												id="formCheck-8"><label class="form-check-label"
 												for="formCheck-8">Android</label></div>
