--- a/user/views/producer.ejs
+++ b/user/views/producer.ejs
@@ -21,7 +21,7 @@
                                     <div class="row">
                                         <div class="col-md-12"><a class="product-image"
                                                 href="products/product"><img
-                                                    src="assets/img/products/iphone11.jpeg"></a></div>
+                                                    src="assets/img/products/IphoneX.jpeg"></a></div>
                                     </div>
                                     <div class="row">
                                         <div class="col-8">
@@ -54,7 +54,7 @@
                                     <div class="row">
                                         <div class="col-md-12"><a class="product-image"
                                                 href="products/product"><img
-                                                    src="assets/img/products/macbookpro.jpeg"></a></div>
+                                                    src="assets/img/products/macbook.jpg"></a></div>
                                     </div>
                                     <div class="row">
                                         <div class="col-8">
@@ -128,7 +128,7 @@
                                     <div class="row">
                                         <div class="col-md-12"><a class="product-image"
                                                 href="products/product"><img
-                                                    src="assets/img/products/samsungs10.jpeg"></a></div>
+                                                    src="assets/img/products/s10.jpeg"></a></div>
                                     </div>
                                     <div class="row">
                                         <div class="col-8">
@@ -162,7 +162,7 @@
                                     <div class="row">
                                         <div class="col-md-12"><a class="product-image"
                                                 href="products/product"><img
-                                                    src="assets/img/products/samsung-notebook-9-pro.jpeg"></a>
+                                                    src="assets/img/products/notebook.jpeg"></a>
                                         </div>
                                     </div>
                                     <div class="row">
