--- a/user/views/index.ejs
+++ b/user/views/index.ejs
@@ -102,7 +102,7 @@
 									<div class="clean-product-item">
 										<div class="image"><a href="./products/product" ><img class="img-fluid d-block mx-auto"
 													src="assets/img/products/airpodpro.jpeg"></a></div>
-										<div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a>
+										<div class="product-name"><a href="#">Airpod</a>
 										</div>
 										<div class="about">
 											<div class="rating"><img src="assets/img/star.svg"><img
@@ -110,7 +110,7 @@
 													src="assets/img/star-half-empty.svg"><img
 													src="assets/img/star-empty.svg"></div>
 											<div class="price">
-												<h3>$100</h3>
+												<h3>$249.00</h3>
 											</div>
 										</div>
 									</div>
@@ -119,7 +119,7 @@
 									<div class="clean-product-item">
 										<div class="image"><a href="./products/product"><img class="img-fluid d-block mx-auto"
 													src="assets/img/products/macbook.jpg"></a></div>
-										<div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a>
+										<div class="product-name"><a href="#">Macbook Pro</a>
 										</div>
 										<div class="about">
 											<div class="rating"><img src="assets/img/star.svg"><img
@@ -127,7 +127,7 @@
 													src="assets/img/star-half-empty.svg"><img
 													src="assets/img/star-empty.svg"></div>
 											<div class="price">
-												<h3>$100</h3>
+												<h3>$1,499.00</h3>
 											</div>
 										</div>
 									</div>
@@ -136,7 +136,7 @@
 									<div class="clean-product-item">
 										<div class="image"><a href="./products/product" ><img class="img-fluid d-block mx-auto"
 													src="assets/img/products/IphoneX.jpeg"></a></div>
-										<div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a>
+										<div class="product-name"><a href="#">IPhone X</a>
 										</div>
 										<div class="about">
 											<div class="rating"><img src="assets/img/star.svg"><img
@@ -144,7 +144,7 @@
 													src="assets/img/star-half-empty.svg"><img
 													src="assets/img/star-empty.svg"></div>
 											<div class="price">
-												<h3>$100</h3>
+												<h3>$759.00</h3>
 											</div>
 										</div>
 									</div>
@@ -153,7 +153,7 @@
 									<div class="clean-product-item">
 										<div class="image"><a href="./products/product"><img class="img-fluid d-block mx-auto"
 													src="assets/img/products/ssgear-bud.jpg"></a></div>
-										<div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a>
+										<div class="product-name"><a href="#">Samsung grear bud</a>
 										</div>
 										<div class="about">
 											<div class="rating"><img src="assets/img/star.svg"><img
@@ -161,7 +161,7 @@
 													src="assets/img/star-half-empty.svg"><img
 													src="assets/img/star-empty.svg"></div>
 											<div class="price">
-												<h3>$100</h3>
+												<h3>$230.00</h3>
 											</div>
 										</div>
 									</div>
@@ -170,7 +170,7 @@
 									<div class="clean-product-item">
 										<div class="image"><a href="./products/product"><img class="img-fluid d-block mx-auto"
 													src="assets/img/products/notebook.jpeg"></a></div>
-										<div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a>
+										<div class="product-name"><a href="#">Samsung notebook 9</a>
 										</div>
 										<div class="about">
 											<div class="rating"><img src="assets/img/star.svg"><img
@@ -178,7 +178,7 @@
 													src="assets/img/star-half-empty.svg"><img
 													src="assets/img/star-empty.svg"></div>
 											<div class="price">
-												<h3>$100</h3>
+												<h3>$1,329.00</h3>
 											</div>
 										</div>
 									</div>
@@ -187,7 +187,7 @@
 									<div class="clean-product-item">
 										<div class="image"><a href="./products/product"><img class="img-fluid d-block mx-auto"
 													src="assets/img/products/s10.jpeg"></a></div>
-										<div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a>
+										<div class="product-name"><a href="#">Samsung S10</a>
 										</div>
 										<div class="about">
 											<div class="rating"><img src="assets/img/star.svg"><img
@@ -195,7 +195,7 @@
 													src="assets/img/star-half-empty.svg"><img
 													src="assets/img/star-empty.svg"></div>
 											<div class="price">
-												<h3>$100</h3>
+												<h3>$659.00</h3>
 											</div>
 										</div>
 									</div>
