~ admin: product-shop, ~user: delivery

--- a/admin/views/products/elements/navbar-header.ejs
+++ b/admin/views/products/elements/navbar-header.ejs
@@ -16,7 +16,7 @@
             <form class="form-inline mr-auto" target="_self">
                 <div class="form-group"><label for="search-field"><i class="fa fa-search"></i></label><input
                         class="form-control search-field" type="search" id="search-field" name="search"></div>
-            </form><span class="navbar-text"><a class="login" href="../login">Đăng nhập</a></span><a
+            </form><span class="navbar-text"><a class="login" href="../">Đăng nhập</a></span><a
                 class="btn btn-light action-button" role="button" href="../register">Đăng ký</a>
         </div>
     </div>
