--- a/user/views/users/elements/navbar-left.ejs
+++ b/user/views/users/elements/navbar-left.ejs
@@ -6,7 +6,7 @@
         </a>
         <hr class="sidebar-divider my-0">
         <ul class="nav navbar-nav text-light" id="accordionSidebar">
-            <li class="nav-item" role="presentation"><a class="nav-link" href=""><i
+            <li class="nav-item" role="presentation"><a class="nav-link" href="./"><i
                         class="fas fa-user-alt"></i><span>Thông tin người dùng</span></a><a class="nav-link"
                     href="cart"><i class="fas fa-shopping-cart"></i><span>Quản lý giỏ hàng</span></a><a
                     class="nav-link" href="delivery"><i class="fas fa-truck"></i><span>Thông tin về giao
