--- a/admin/views/admins/product-shop.ejs
+++ b/admin/views/admins/product-shop.ejs
@@ -79,7 +79,7 @@
             <div class="col-sm-6 col-md-4 product-item">
                 <div class="product-container">
                     <div class="row">
-                        <div class="col-md-12"><a class="product-image" href="#"><img
+                        <div class="col-md-12"><a class="product-image" href="../products/product"><img
                                     src="../assets/img/products/iphone11.jpeg"></a></div>
                     </div>
                     <div class="row">
@@ -122,7 +122,7 @@
             <div class="col-sm-6 col-md-4 product-item">
                 <div class="product-container">
                     <div class="row">
-                        <div class="col-md-12"><a class="product-image" href="#"><img
+                        <div class="col-md-12"><a class="product-image" href="../products/product"><img
                                     src="../assets/img/products/ssgear-bud.jpg"></a></div>
                     </div>
                     <div class="row">
@@ -153,7 +153,7 @@
             <div class="col-sm-6 col-md-4 product-item">
                 <div class="product-container">
                     <div class="row">
-                        <div class="col-md-12"><a class="product-image" href="#"><img
+                        <div class="col-md-12"><a class="product-image" href="../products/product"><img
                                     src="../assets/img/products/samsung-notebook-9-pro.jpeg"></a></div>
                     </div>
                     <div class="row">
@@ -184,7 +184,7 @@
             <div class="col-sm-6 col-md-4 product-item">
                 <div class="product-container">
                     <div class="row">
-                        <div class="col-md-12"><a class="product-image" href="#"><img
+                        <div class="col-md-12"><a class="product-image" href="../products/product"><img
                                     src="../assets/img/products/samsungs10.jpeg"></a></div>
                     </div>
                     <div class="row">
