--- a/user/views/users/delivery.ejs
+++ b/user/views/users/delivery.ejs
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-        <h3 class="text-dark mb-0">Thông tin giao hàng</h3>
+        <h3 class="text-dark mb-0">Giỏ hàng</h3>
     </div>
     <div class="card shadow">
         <div class="card-body">
@@ -8,10 +8,9 @@
                 <table class="table dataTable my-0" id="dataTable">
                     <thead>
                         <tr>
-                            <th>Mặt hàng</th>
-                            <th>Cửa hàng</th>
-                            <th>Địa điểm</th>
-                            <th>Số lượng</th>
+                            <th>Mã đặt hàng</th>
+                            <th>Mã đơn vị vận chuyển</th>
+                            <th>Chi tiết</th>
                             <th>Ngày thêm</th>
                             <th>Số tiền</th>
                             <th>Trạng thái</th>
@@ -19,33 +18,203 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Iphone 6</td>
-                            <td>FPT Shop</td>
-                            <td>Hồ Chí Minh</td>
-                            <td>3</td>
+                            <td>O123</td>
+                            <td>VC01</td>
+                            <td><button type="button" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#exampleModal">
+                                    Xem chi tiết
+                                </button>
+                                <div class="modal fade modal-fade" role="dialog" tabindex="-1" id="exampleModal"
+                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h4 class="modal-title">Đơn đặt hàng</h4><button type="button"
+                                                    class="close" data-dismiss="modal" aria-label="Close"><span
+                                                        aria-hidden="true">×</span></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Kính gửi quý khách: XYZ<br>Số điện thoại:
+                                                    0123456789<br>Số nhà: 123 Trần Hưng Đạo, quận 10,
+                                                    HCM<br>ID đơn hàng: 1944565FC<br>Kiện hàng:
+                                                    .....<br><br></p>
+                                            </div>
+                                            <div class="modal-footer"><button class="btn btn-light" type="button"
+                                                    data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
                             <td>2008/11/28</td>
                             <td>$162,700</td>
-                            <td>Đang xử lý</td>
+                            <td class="btn-success">Đã nhận hàng</td>
                         </tr>
                         <tr>
-                            <td>Airpod</td>
-                            <td>Thế giới di động</td>
-                            <td>Hà Nội</td>
-                            <td>2</td>
-                            <td>2009/10/09<br></td>
-                            <td>$100.00</td>
-                            <td>Đang giao</td>
+                            <td>O125</td>
+                            <td>VC02</td>
+                            <td><button type="button" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#exampleModal">
+                                    Xem chi tiết
+                                </button>
+                                <div class="modal fade modal-fade" role="dialog" tabindex="-1" id="exampleModal"
+                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h4 class="modal-title">Đơn đặt hàng</h4><button type="button"
+                                                    class="close" data-dismiss="modal" aria-label="Close"><span
+                                                        aria-hidden="true">×</span></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Kính gửi quý khách: XYZ<br>Số điện thoại:
+                                                    0123456789<br>Số nhà: 123 Trần Hưng Đạo, quận 10,
+                                                    HCM<br>ID đơn hàng: 1944565FC<br>Kiện hàng:
+                                                    .....<br><br></p>
+                                            </div>
+                                            <div class="modal-footer"><button class="btn btn-light" type="button"
+                                                    data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>2008/11/28</td>
+                            <td>$162,700</td>
+                            <td class="btn-success">Đã nhận hàng</td>
                         </tr>
                         <tr>
-                            <td>Macbook</td>
-                            <td>Apple Store</td>
-                            <td>Đà Nẵng</td>
-                            <td>1</td>
-                            <td>2009/01/12<br></td>
-                            <td>$86,000</td>
-                            <td>Đang xử lý</td>
+                            <td>O126</td>
+                            <td>VC01</td>
+                            <td><button type="button" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#exampleModal">
+                                    Xem chi tiết
+                                </button>
+                                <div class="modal fade modal-fade" role="dialog" tabindex="-1" id="exampleModal"
+                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h4 class="modal-title">Đơn đặt hàng</h4><button type="button"
+                                                    class="close" data-dismiss="modal" aria-label="Close"><span
+                                                        aria-hidden="true">×</span></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Kính gửi quý khách: XYZ<br>Số điện thoại:
+                                                    0123456789<br>Số nhà: 123 Trần Hưng Đạo, quận 10,
+                                                    HCM<br>ID đơn hàng: 1944565FC<br>Kiện hàng:
+                                                    .....<br><br></p>
+                                            </div>
+                                            <div class="modal-footer"><button class="btn btn-light" type="button"
+                                                    data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>2008/11/28</td>
+                            <td>$162,700</td>
+                            <td class="btn-warning">Đang xử lý</td>
                         </tr>
-                        <tr></tr>
+                        <tr>
+                            <td>O127</td>
+                            <td>VC01</td>
+                            <td><button type="button" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#exampleModal">
+                                    Xem chi tiết
+                                </button>
+                                <div class="modal fade modal-fade" role="dialog" tabindex="-1" id="exampleModal"
+                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h4 class="modal-title">Đơn đặt hàng</h4><button type="button"
+                                                    class="close" data-dismiss="modal" aria-label="Close"><span
+                                                        aria-hidden="true">×</span></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Kính gửi quý khách: XYZ<br>Số điện thoại:
+                                                    0123456789<br>Số nhà: 123 Trần Hưng Đạo, quận 10,
+                                                    HCM<br>ID đơn hàng: 1944565FC<br>Kiện hàng:
+                                                    .....<br><br></p>
+                                            </div>
+                                            <div class="modal-footer"><button class="btn btn-light" type="button"
+                                                    data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>2008/11/28</td>
+                            <td>$162,700</td>
+                            <td class="btn-success">Đã nhận hàng</td>
+                        </tr>
+                        <tr>
+                            <td>O128</td>
+                            <td>VC02</td>
+                            <td><button type="button" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#exampleModal">
+                                    Xem chi tiết
+                                </button>
+                                <div class="modal fade modal-fade" role="dialog" tabindex="-1" id="exampleModal"
+                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h4 class="modal-title">Đơn đặt hàng</h4><button type="button"
+                                                    class="close" data-dismiss="modal" aria-label="Close"><span
+                                                        aria-hidden="true">×</span></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Kính gửi quý khách: XYZ<br>Số điện thoại:
+                                                    0123456789<br>Số nhà: 123 Trần Hưng Đạo, quận 10,
+                                                    HCM<br>ID đơn hàng: 1944565FC<br>Kiện hàng:
+                                                    .....<br><br></p>
+                                            </div>
+                                            <div class="modal-footer"><button class="btn btn-light" type="button"
+                                                    data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>2008/11/28</td>
+                            <td>$162,700</td>
+                            <td class="btn-info">Đang giao</td>
+                        </tr>
+                        <tr>
+                            <td>O129</td>
+                            <td>VC03</td>
+                            <td><button type="button" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#exampleModal">
+                                    Xem chi tiết
+                                </button>
+                                <div class="modal fade modal-fade" role="dialog" tabindex="-1" id="exampleModal"
+                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h4 class="modal-title">Đơn đặt hàng</h4><button type="button"
+                                                    class="close" data-dismiss="modal" aria-label="Close"><span
+                                                        aria-hidden="true">×</span></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Kính gửi quý khách: XYZ<br>Số điện thoại:
+                                                    0123456789<br>Số nhà: 123 Trần Hưng Đạo, quận 10,
+                                                    HCM<br>ID đơn hàng: 1944565FC<br>Kiện hàng:
+                                                    .....<br><br></p>
+                                            </div>
+                                            <div class="modal-footer"><button class="btn btn-light" type="button"
+                                                    data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>2008/11/28</td>
+                            <td>$162,700</td>
+                            <td class="btn-success">Đã nhận hàng</td>
+                        </tr>
                     </tbody>
                     <tfoot>
                         <tr></tr>
@@ -54,4 +223,3 @@
             </div>
         </div>
     </div>
-</div>
